Updated recent work

--- a/index.html
+++ b/index.html
@@ -95,9 +95,22 @@ http://www.tooplate.com/view/2087-kalay
                <div class="wow fadeInUp col-md-4 col-sm-6" data-wow-delay="0.4s">
                     <!-- WORK THUMB -->
                     <div class="work-thumb">
-                         <a href="images/work-image4.5.png" class="image-popup">
+                         <a href="images/starrrs3.png" class="image-popup">
                               <div class="work-thumb-overlay">
-                                   <h2>Shape Buster</h2><h4 class="white-color">XD / Unity</h4></br>
+                                   <h2>StARRRs</h2><h4 class="white-color">Unity / Aseprite / Tiled</h4></br>
+                                   <h4>The space pirate Roguelike.<h4>
+                              </div>
+                              <img src="images/starrrs.gif" class="img-responsive" alt="Work 1">
+                         </a>
+                    </div>
+               </div>
+
+               <div class="wow fadeInUp col-md-4 col-sm-6" data-wow-delay="0.4s">
+                    <!-- WORK THUMB -->
+                    <div class="work-thumb">
+                         <a href="images/work-image7.jpg" class="image-popup">
+                              <div class="work-thumb-overlay">
+                                   <h2>Shape Buster</h2><h4 class="white-color">Unity / XD</h4></br>
                                    <h4>Try to draw the best circle!<h4>
                               </div>
                               <img src="images/work-image7.jpg" class="img-responsive" alt="Work 1">
@@ -110,23 +123,10 @@ http://www.tooplate.com/view/2087-kalay
                     <div class="work-thumb">
                          <a href="images/work-image4.5.png" class="image-popup">
                               <div class="work-thumb-overlay">
-                                   <h2>Sam's Aerial Fishing</h2><h4 class="white-color">Java / Photoshop</h4></br></br></br></br>
-                                   <h4>Gains hunter and fishing xp with the "aerial fishing" method.<h4>
+                                   <h2>Sam's Aerial Fishing</h2><h4 class="white-color">Java / Photoshop</h4></br></br></br>
+                                   <h4>Script for Dreambot. Gains hunter and fishing xp with the "aerial fishing" method.<h4>
                               </div>
                               <img src="images/work-image4.png" class="img-responsive" alt="Work 1">
-                         </a>
-                    </div>
-               </div>
-
-               <div class="wow fadeInUp col-md-4 col-sm-6" data-wow-delay="0.4s">
-                    <!-- WORK THUMB -->
-                    <div class="work-thumb">
-                         <a href="images/work-image1.png" class="image-popup">
-                              <div class="work-thumb-overlay">
-                                   <h2>Sam's Cannonball Master</h2>
-                                   <h4 class="white-color">Java / Photoshop</h4>
-                              </div>
-                              <img src="images/work-image1.5.png" class="img-responsive" alt="Work 1">
                          </a>
                     </div>
                </div>
@@ -140,15 +140,30 @@ http://www.tooplate.com/view/2087-kalay
                <div class="wow fadeInUp col-md-4 col-sm-6" data-wow-delay="0.4s">
                     <!-- WORK THUMB -->
                     <div class="work-thumb">
+                         <a href="images/work-image1.png" class="image-popup">
+                              <div class="work-thumb-overlay">
+                                   <h2>Sam's Cannonball Master</h2>
+                                   <h4 class="white-color">Java / Photoshop</h4></br>
+                                   <h4>Script for Dreambot. Gains smithing xp with cannonballs.<h4>
+                              </div>
+                              <img src="images/work-image1.5.png" class="img-responsive" alt="Work 1">
+                         </a>
+                    </div>
+               </div>
+               <div class="wow fadeInUp col-md-4 col-sm-6" data-wow-delay="0.4s">
+                    <!-- WORK THUMB -->
+                    <div class="work-thumb">
                          <a href="images/work-image5.gif" class="image-popup">
                               <div class="work-thumb-overlay">
                                    <h2>Forum Logo</h2>
-                                   <h4 class="white-color">Photoshop / Blender</h4>
+                                   <h4 class="white-color">Photoshop / Blender</h4></br></br></br>
+                                   <h4>Sythe forum logo<h4>
                               </div>
                               <img src="images/work-image5.gif" class="fill" alt="Work 2">
                          </a>
                     </div>
                </div>
+
                <div class="wow fadeInUp col-md-4 col-sm-6" data-wow-delay="0.4s">
                     <!-- WORK THUMB -->
                     <div class="work-thumb">
@@ -158,19 +173,6 @@ http://www.tooplate.com/view/2087-kalay
                                    <h4 class="white-color">Moi3D / 3ds Max / Print</h4>
                               </div>
                               <img src="images/work-image2.jpg" class="img-responsive" alt="Work 2">
-                         </a>
-                    </div>
-               </div>
-
-               <div class="wow fadeInUp col-md-4 col-sm-6" data-wow-delay="0.4s">
-                    <!-- WORK THUMB -->
-                    <div class="work-thumb">
-                         <a href="images/work-image3.png" class="image-popup">
-                              <div class="work-thumb-overlay">
-                                   <h2>Zinogre Sketch *Unfinished*</h2>
-                                   <h4 class="white-color">Photoshop</h4>
-                              </div>
-                              <img src="images/work-image3.png" class="img-responsive" alt="Work 3">
                          </a>
                     </div>
                </div>
@@ -215,7 +217,7 @@ http://www.tooplate.com/view/2087-kalay
                     <div class="service-thumb">
                          <i class="fa fa-edit"></i>
                          <h4>Graphic Design</h4>
-                         <p>Photoshop / Illustrator / Blender</p>
+                         <p>Photoshop / Aseprite / Blender / Illustrator</p>
                     </div>
                </div>
 
