--- a/devblog.html
+++ b/devblog.html
@@ -63,7 +63,14 @@ http://www.tooplate.com/view/2087-kalay
                     <div class="about-thumb">
                          <!-- SECTION TITLE -->
                          <div class="wow fadeInUp section-title" data-wow-delay="0.6s">
-                              <h4><a href="index.html#about"><- Back</a></h4><hr>
+                              <h4><a href="index.html#about"><- Back</a></h4>
+                              <hr>
+                              <p>- Feb 9, 2022</p></br>
+                              <h2>Document everything...</h2>
+                              <img src="images/TDDflowchart.png" style="width: 75%; height: auto;"></br></br>
+                                   <p>&nbsp;&nbsp; While there was a lot of progress with ideas this week, there wasn't a whole lot of actual development done. Mainly focusing on our TDDs (Technical Design Documents), we all individually worked on our allotted game elements in the document, and came together to help complete certain sections. We had a lot of group discussions to flesh out the written work behind our game, and help with grammar for our non-English speaking members. TDDs have been a bit of a challenge for us, with most of us excelling in the actual development or art aspect of creating a game. Working on our TDDs, however, really helped us flesh out the ideas behind the entire game, and allow us to see what we might be missing or not thinking of. We hadn't even considered the Loading or Save screens yet, so that's something I'm going to work on designing over the next week. Other ideas we fleshed out were the actual game menus and UI, which I added into our documentation.</p>
+                               </br><img src="images/starrrswide.gif" style="width: auto; height: auto;"></br></br>
+                               <p>&nbsp;&nbsp; As far as design goes, I was able to complete our game's Logo, with a few small changes to be made here and there. I made some adjustments to the tileset, which is bordering completion for the area I'm working on at this point in time. I may expand on it and make other themes for the tileset in the coming weeks as well. This next week I'm excited to get started in the actual deep development of Stolen Starrrs, so I can dive into the world of asset creation.</p></br><hr>
                               <p>- Feb 3, 2022</p></br>
                               <h2>Phase Complete...</h2>
                               <img src="images/starrrs3.png" style="width: 100%; height: auto;"></br></br>
