Updated dev blog

--- a/devblog.html
+++ b/devblog.html
@@ -65,6 +65,12 @@ http://www.tooplate.com/view/2087-kalay
                          <div class="wow fadeInUp section-title" data-wow-delay="0.6s">
                               <h4><a href="index.html#about"><- Back</a></h4>
                               <hr>
+                              <p>- Feb 17, 2022</p></br>
+                              <h2>Trials and tribulations...</h2>
+                              <img src="images/prototype1.png" style="width: 75%; height: auto;"></br></br>
+                                   <p>&nbsp;&nbsp; Pretty major update, our team has almost finished the prototype. This week we needed to bring the basics of our project together. My main role this week was to create all of the assets and menus scenes. The art features a 16x16 tileset with game, UI, and character elements. Menu backgrounds and title animations were also added to the game to spice it up a bit. Honestly I had a pretty easy time, which gave me the extra time to help my teammates. </p>
+                               </br><img src="images/networkgraph.png" style="width: auto; height: auto;"></br></br>
+                               <p>&nbsp;&nbsp; Regarding the progression of this week, we have been through quite a few issues. Github being the largest monster of them all. Pulling branches can be incredibly complicated as we learned. One of the branches that had been merged had many conflicts, and completely broke our project. Luckly we came together, sorted out the issues, and now have a working demo! Hopefully next week will have less hiccups.</p></br><hr>
                               <p>- Feb 9, 2022</p></br>
                               <h2>Document everything...</h2>
                               <img src="images/TDDflowchart.png" style="width: 75%; height: auto;"></br></br>
