Updated dev blog

--- a/devblog.html
+++ b/devblog.html
@@ -65,6 +65,13 @@ http://www.tooplate.com/view/2087-kalay
                          <div class="wow fadeInUp section-title" data-wow-delay="0.6s">
                               <h4><a href="index.html#about"><- Back</a></h4>
                               <hr>
+                              <p>- Mar 3, 2022</p></br>
+                              <h2>Assets incomming...<img src="images/Char1idleanim.gif" style="width: auto; height: auto;"></h2>
+                              <img src="images/pausescreen.png" style="width: 80%; height: auto;">
+								</br></br>
+                                   <p>&nbsp;&nbsp; - Created and added pause bg <br> - Imported assets to unity <br> - Created more sprites for tileset (specifically shop, cafeteria, and gun range) <br> - Created shop animation <br> - Progressed in asset creation </p>
+                               </br><img src="images/newsprites.png" style="width: auto; height: auto;"></br></br>
+                               <p>&nbsp;&nbsp; - Challenges <br> - Solutions <br> - Future Ideas</p></br><hr>
                               <p>- Feb 24, 2022</p></br>
                               <h2>Finally a prototype...</h2>
                               <video width="480" height="270" autoplay muted loop>
