--- a/devblog.html
+++ b/devblog.html
@@ -65,6 +65,15 @@ http://www.tooplate.com/view/2087-kalay
                          <div class="wow fadeInUp section-title" data-wow-delay="0.6s">
                               <h4><a href="index.html#about"><- Back</a></h4>
                               <hr>
+                              <p>- Mar 16, 2022</p></br>
+                              <h2>Scenes in space...<img src="images/Emote1.png" style="width: auto; height: auto;"></h2>
+                              <img src="images/options.png" style="width: 80%; height: auto;">
+								</br></br>
+                                   <p>&nbsp;&nbsp; So much came together this week! I created our options menu scene, which was surprisingly more difficult than I thought. Choosing what options you want for your game also means implementing those options in the code, so I had to make sure to keep everything in the scope of what we can manage at this time. I also put together our credits scene, which I may add more to as we move closer to the conclusion and upload of our game to the public. As far as Jira goes, the last thing I completed this week was with Ahmet, repurposing the menu system, allowing us to use the main menu and options menu scenes to be used functionally. </p>
+                               </br><img src="images/credits.png" style="width: 80%; height: auto;"></br></br>
+                               <p>&nbsp;&nbsp; Our sound designer completed a few tracks and collections of sound FX, which Josh implemented into the different scenes. Seeing the game work with sound behind it really helps pull yourself into the actual game, it's exciting to see. In order to favor a more linear level system, we've decided to drop procedural generation. We needed to narrow our scope a bit more in order to be able to see a mostly finished product by the end of April. Serhii was able to add a system for different guns, which will allow the character to have different abilities or weapon pickups. Ahmet created a portal system, which will transport the player from scene to scene, and I created assets for players to see that visually. 
+
+								<br>&nbsp;&nbsp;Coming up is our last sprint to the finish line. We are aiming to create a small video to include in the Level Up Showcase, which will also require a finished webpage and uploading the game to itch.io. We are also going to be uploading the game to Google Play, and hope for a future Steam release. By the end of next week, we should be reaching an alpha stage of our build. This will include a boss fight, and basic stat progression for the players to have something to build on. Everything is really wrapping up, and I feel genuinely excited to see where things can go from here.</p></br><hr>
                               <p>- Mar 3, 2022</p></br>
                               <h2>Assets incomming...<img src="images/Char1idleanim.gif" style="width: auto; height: auto;"></h2>
                               <img src="images/pausescreen.png" style="width: 80%; height: auto;">
