Updated dev blog

--- a/devblog.html
+++ b/devblog.html
@@ -65,13 +65,13 @@ http://www.tooplate.com/view/2087-kalay
                          <div class="wow fadeInUp section-title" data-wow-delay="0.6s">
                               <h4><a href="index.html#about"><- Back</a></h4>
                               <hr>
-                              <p>- Mar 24, 2022</p><!--</br>-->
+                              <p>- Mar 31, 2022</p><!--</br>-->
                               <h3> IN PROGRESS </h3>
                               <h2>Crew building...<img src="images/enemy.png" style="width: auto; height: auto;"></h2>
                               <img src="images/teamphoto.png" style="width: 80%; height: auto; border-radius: 2%;">
 								</br></br>
                                    <p>&nbsp;&nbsp; This week: lots of bug testing and fixing (fixed enemy and object colliders), finished creating boss sprites, added more weapons, sprites now have shadows, added animations and animator to (player, enemy, portal, and more), options menu is almost done (volume slider and windowed toggle works!)  </p>
-                               </br><img src="images/gametileset.png" style="width: 80%; height: auto;"></br></br>
+                               </br><img src="images/shopscreenshot.png" style="width: 80%; height: auto;"></br></br>
                                <p>&nbsp;&nbsp; Team Stuff: Ahmet scripted the shop menu for our game, so now you can walk up to the shop and buy things. Serhii added more guns and an explosion system with knockback. Josh and I also created a functioning health bar for our in game scene. Devon has been working on refining the hub and creating our first level.
 
 								<br><br>&nbsp;&nbsp; Future: Finish adding animation changing in scripts, Finish up a couple assets for first release, Create the second level, Possibly add in credits minigame, Bug testing and refinement. </p></br><hr>
