--- a/devblog.html
+++ b/devblog.html
@@ -66,15 +66,14 @@ http://www.tooplate.com/view/2087-kalay
                               <h4><a href="index.html#about"><- Back</a></h4>
                               <hr>
                               <p>- Mar 31, 2022</p><!--</br>-->
-                              <h3> IN PROGRESS </h3>
                               <h2>Crew building...<img src="images/enemy.png" style="width: auto; height: auto;"></h2>
                               <img src="images/teamphoto.png" style="width: 80%; height: auto; border-radius: 2%;">
 								</br></br>
-                                   <p>&nbsp;&nbsp; This week: lots of bug testing and fixing (fixed enemy and object colliders), finished creating boss sprites, added more weapons, sprites now have shadows, added animations and animator to (player, enemy, portal, and more), options menu is almost done (volume slider and windowed toggle works!)  </p>
+                                   <p>&nbsp;&nbsp; It finally happened, our team was able to come together as a whole for the first time in person. Meeting at the library at St. Lawrence College, during the anti-procrastination event the school was holding, we were able to grab others and pull them over to try out our game. Valuable feedback was provided, and fun times were had between the group and our peers and teachers. <br><br>
+                                   &nbsp;&nbsp;Bug testing was a main focus for me this week, with our enemy and object colliders getting fixed being a big one. Sprites now have shadows, which is great for the depth and art of the game. I've finished creating our boss sprites, which will be added into the level soon. The animators and animations have been added to the player, enemy, portal, and more! Our options menu is really coming to fruition as well, with the volume slider and windowed toggle working. Lastly, I've created more weapons so that there is more variety of choice for the player.</p>
                                </br><img src="images/shopscreenshot.png" style="width: 80%; height: auto;"></br></br>
-                               <p>&nbsp;&nbsp; Team Stuff: Ahmet scripted the shop menu for our game, so now you can walk up to the shop and buy things. Serhii added more guns and an explosion system with knockback. Josh and I also created a functioning health bar for our in game scene. Devon has been working on refining the hub and creating our first level.
-
-								<br><br>&nbsp;&nbsp; Future: Finish adding animation changing in scripts, Finish up a couple assets for first release, Create the second level, Possibly add in credits minigame, Bug testing and refinement. </p></br><hr>
+                               <p>&nbsp;&nbsp; Ahmet was able to script the shop menu for our game, so now if the player wants to choose one of those new weapons, they can walk up to the shop and buy them. Serhii also added more guns, and an explosion system with a knockback to really create the impact of your shots. Josh and I worked together to create a functioning heatlh bar for our in game scene, while Devon works on refining the hub and creating the first level's layout. 
+								<br><br>&nbsp;&nbsp; FComing next is finishing the animation changing in the scripting end, as well as completing some assets for the first release. More levels are going to be layed out, and we're even thinking of adding a minigame to the credits. There's definitely more bug testing to be had in this final stretch, as we refine everything for our itch.io and Google Play release. </p></br><hr>
                               <p>- Mar 16, 2022</p></br>
                               <h2>Scenes in space...<img src="images/Emote1.png" style="width: auto; height: auto;"></h2>
                               <img src="images/options.png" style="width: 80%; height: auto;">
