Updated dev blog

--- a/devblog.html
+++ b/devblog.html
@@ -65,6 +65,14 @@ http://www.tooplate.com/view/2087-kalay
                          <div class="wow fadeInUp section-title" data-wow-delay="0.6s">
                               <h4><a href="index.html#about"><- Back</a></h4>
                               <hr>
+                              <p>- Apr 7, 2022</p><!--</br>-->
+                              <h2>Alpha Release!<img src="images/Char1idleanim.gif" style="width: auto; height: auto;"></h2>
+                              <img src="images/sc2.png" style="width: 80%; height: auto; border-radius: 2%;">
+								</br></br>
+                                   <p>&nbsp;&nbsp; A lot of work went into this week to prepare everything to make our game publicly available. We learned not to procrastinate with video-making, as we cusped the deadline for the Level-Up Expo but successfully submitted our reel. In it, we show off gameplay which now includes angled aim thanks to Serhii. Ahmet was able to expand our shop, adding upgrades and even more guns to the list. We're still planning on adding more in the future, and are working on smoothing out the health system slightly more. Our audio designer Savanah created more music and sound FX, which Josh added into our game. There's different music depending on which level or area you're in now, and it brings more atmosphere into our game.
+                                   <br><br>&nbsp;&nbsp; I worked really hard on refining the Pirate Hub this week, cutting down the larger size and making it feel more approachable. I updated the credits, and got some input on how we might work in a minigame inside of them. The boss and more enemies got animations, and I created level 3 to expand our gameplay length. We now also have Load and Save options added to the game, in case you'd like to take a break and come back later. With a fade transition, an updated tileset, and updated main menu with small bug fixes here and there, there was a lot of work put into refining the experience people will have.</p>
+                               </br><img src="images/itchpage.png" style="width: 80%; height: auto; border-radius: 2%;"></br></br>
+                               <p>&nbsp;&nbsp; Within this last true week of crunch time, we finally have put up an <a href="https://universal-orbit.itch.io/stolen-starrrs">itch.io page</a>, where our game is now publicly available for alpha. We had a lot of trouble coming up with an actual team name, but Josh brought up the name Universal Orbit, and it's stuck. It's refreshing to be able to put something out there that I've worked on so hard with a great team, and I'm excited to develop more and learn every day. </p></br><hr>
                               <p>- Mar 31, 2022</p><!--</br>-->
                               <h2>Crew building...<img src="images/enemy.png" style="width: auto; height: auto;"></h2>
                               <img src="images/teamphoto.png" style="width: 80%; height: auto; border-radius: 2%;">
