Updated Stolen Starrrs link in index

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ http://www.tooplate.com/view/2087-kalay
                <div class="wow fadeInUp col-md-4 col-sm-6" data-wow-delay="0.4s">
                     <!-- WORK THUMB -->
                     <div class="work-thumb">
-                         <a href="images/starrrs3.png" class="image-popup">
+                         <a href="https://universal-orbit.itch.io/stolen-starrrs">
                               <div class="work-thumb-overlay">
                                    <h2>StARRRs</h2><h4 class="white-color">Unity / Aseprite / Tiled</h4></br>
                                    <h4>The space pirate Roguelike.<h4>
