--- a/blog.html
+++ b/blog.html
@@ -32,7 +32,20 @@
 		</table>
 		<table class="main">
 			<tbody>
-				<td>
+				<td><h2>New Year, New Me!&#127881;</h2>
+					<p>January 18, 2024</p>
+					<p><img src="images/blog/blog1.png" width="770"></img></p>
+					<h3>&nbsp;&nbsp;A lot has happened in the past year. Jobs have come and gone, cars too I guess. (My car got totaled, dw I'm fine) I've gotten better at working on cars on the side. However one thing that I've learned is that my talent and skill have stayed. 
+					<br><br>
+					&nbsp;&nbsp;This year, I plan to change a lot about how I work on projects. Motivation and organization need to be the more important to me. Without motivation I can't keep pushing myself towards projects, and without organization I can't complete them. This new website should help with that, it's a lot more analog and organized. The information is much easier to digest.  
+					<br><br>
+					&nbsp;&nbsp;One issue I encountered accidentally is the fact that github uses case-sensitive directories. My bad I guess. At least I got to learn you can code right in browser with (.) while on the directory you want.
+					<br><br>
+					&nbsp;&nbsp;Hope everyone is doing well, <br>&nbsp;&nbsp;Cheers, <br>&nbsp;&nbsp;Sam.
+					</h3>
+					<br>
+					<hr>
+					<br>
 					<h2>The Final Week...</h2>
 					<p>April 28, 2022</p>
 					<p><img src="images/stolenstarrrs/sc7.png" width="770"></img></p>
