--- a/blog.html
+++ b/blog.html
@@ -32,7 +32,18 @@
 		</table>
 		<table class="main">
 			<tbody>
-				<td><h2>New Year, New Me!&#127881;</h2>
+				<td><h2>A New Project&#128481;&#65039;</h2>
+					<p>January 25, 2024</p>
+					<p><img src="images/blog/blog2.gif" width="770"></img></p>
+					<h3>&nbsp;&nbsp;Started work on my new main project "Red Sky". So far so good. I feel like the movement is pretty solid now and the player orients towards their direction too. The next big steps will be the interaction system and inventory. Soon I'll be able to start working on models! That will definitly be more fun for me than just coding right now.
+					<br><br>
+					<p><img src="images/blog/blog3.png" width="770"></img></p>
+					&nbsp;&nbsp;Another thing that has been settled is the game loop. Knowing what will be the final idea really helps with scope and direction. One thing that I've noticed is that half my game consists of interactions, inventories and ui. That makes these things very important to the core gameplay, and so I'll be spending extra time refining these systems so that they feel quick and reliable.
+					</h3>
+					<br>
+					<hr>
+					<br>
+					<h2>New Year, New Me!&#127881;</h2>
 					<p>January 18, 2024</p>
 					<p><img src="images/blog/blog1.png" width="770"></img></p>
 					<h3>&nbsp;&nbsp;A lot has happened in the past year. Jobs have come and gone, cars too I guess. (My car got totaled, dw I'm fine) I've gotten better at working on cars on the side. However one thing that I've learned is that my talent and skill have stayed. 
